--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-boto3
+boto3~=1.29.6
 dlib
-numpy
+numpy~=1.24.4
 face_recognition
 opencv-python
 ffmpeg
 awscli
 smart_open
 python-dotenv~=1.0.0
+requests~=2.31.0
