--- a/face-recognition/requirements.txt
+++ b/face-recognition/requirements.txt
@@ -1,6 +1,6 @@
 boto3~=1.29.6
 dlib
-numpy
+numpy~=1.23.5
 flask
 face_recognition
 opencv-python
@@ -9,3 +9,4 @@ awscli
 smart_open
 python-dotenv~=1.0.0
 requests~=2.31.0
+waitress~=2.1.2
